<resources>

    <string name="app_name">Tentwenty Assignment</string>

    <!--  Notify Messages  -->
    <string name="player_error">Can\'t play video</string>
    <string name="book_success_text">You have successfully reserved the seat</string>
    <string name="book_validation_text">Enter seat number</string>

    <!--  MovieListing  -->
    <string name="movie_listing_frag_title">"Ten twenty Movies"</string>

    <!--  MovieAapter  -->
    <string name="row_movie_title">Movie Title</string>
    <string name="row_movie_date">Movie Date</string>
    <string name="row_movie_type">Movie Type</string>
    <string name="row_movie_book_bt">Book</string>

    <!--  MovieDetailFragment  -->
    <string name="movie_detail_title">Movie Title</string>
    <string name="movie_detail_trailer">Watch Trailer</string>
    <string name="movie_detail_genre">Genres</string>
    <string name="movie_detail_date">Date</string>
    <string name="movie_detail_overview">Overview</string>
    <string name="movie_detail_frag_title">Ten twenty Movies</string>

    <!--  MovieWatchActivity  -->
    <string name="watch_move_done">DONE</string>

    <!--  MovieBookFragment  -->
    <string name="movie_book_frag_title">Ten twenty Movies</string>
    <string name="movie_book_frag_choose_loc">Choose Locations</string>
    <string name="movie_book_frag_choose_cin">Choose Cinema</string>
    <string name="movie_book_frag_seat_no">Seat No</string>
    <string name="movie_book_frag_seat_no_hint">Enter seat no</string>
    <string name="movie_book_frag_bt_text">Book</string>
    <string name="watch">Watch</string>
    <string name="search_by_category">Search by category</string>


    <string name="msg_unknown_error">Unknown Error Occurred.</string>
    <string name="msg_network_error">Network error, Please check your internet connection.</string>
    <string name="msg_auth_error">Authentication error, please re-login.</string>
    <string name="msg_not_found_error">Sorry, the requested item not available.</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="get_tickets">Get Tickets</string>
    <string name="action">Action</string>

</resources>