<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.movie.fragments.MovieDetailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/movie_detail_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bottom_image_shadow_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/movie_detail_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/go_btn"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_button_get_tickets"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/get_tickets"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/watch_trailer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/watch_trailer"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/watch_trailer_border"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/watch_trailer"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_detail_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/movie_detail_image"
            app:layout_constraintEnd_toEndOf="@id/movie_detail_image"
            app:layout_constraintStart_toStartOf="@id/movie_detail_image"
            app:layout_constraintTop_toTopOf="@id/movie_detail_image" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:layout_margin="10dp"
            android:text="@string/movie_detail_genre"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_image"
            tools:layout_editor_absoluteX="10dp" />


        <TextView
            android:id="@+id/movie_detail_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_status_green_background"
            android:lines="1"
            android:paddingStart="15dp"
            android:layout_marginTop="15dp"
            android:paddingTop="3dp"
            android:paddingEnd="15dp"
            android:paddingBottom="3dp"
            android:text="@string/action"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/movie_detail_genre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_status_red_background"
            android:ellipsize="end"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:paddingStart="15dp"
            android:paddingTop="3dp"
            android:paddingEnd="15dp"
            android:paddingBottom="3dp"
            android:text="Thriller"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/movie_detail_genre"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/movie_detail_genre3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_status_blue_background"
            android:ellipsize="end"
            android:lines="1"
            android:paddingStart="15dp"
            android:paddingTop="3dp"
            android:paddingEnd="15dp"
            android:paddingBottom="3dp"
            android:text="Science"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/movie_detail_genre2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/movie_detail_genre4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_status_yellow_background"
            android:ellipsize="end"
            android:lines="1"
            android:paddingStart="15dp"
            android:paddingTop="3dp"
            android:paddingEnd="15dp"
            android:layout_marginStart="10dp"
            android:paddingBottom="3dp"
            android:text="Fiction"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/movie_detail_genre3"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:lines="1"
            android:layout_margin="10dp"
            android:text="@string/movie_detail_overview"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_genre" />

        <TextView
            android:id="@+id/movie_detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:lines="5"
            android:text=""
            android:textColor="@color/black_50"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_overview" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>